# SwitchFinder

./: .gitignore  DOCKERFILE  LICENSE  README.md  RNAPathFinder.tar  dockerfile  local_install_setup.sh  matt_installation.md  pyproject.toml  requirements.txt  run_docker.sh
SwFinder/: check_base_pairing.py  classes.py  dms_values_comparisons.py  dotbracket_comparisons.py  folding_api.py  mibp_comparisons.py  utils.py
SwFinder/wrappers/: MIBP_fragments_stem_finder_SHAPE_parralel.py  SwFinder_pipeline.py  apply_classifier.py  calculate_energy_barriers.py  find_mutually_exclusive_stems.py  fold_mutually_exclusive_structures.py  new_classifier.py  preprocess_known_RNA_switches.py  train_classifier.py
SwitchFinder/: IO.py  check_base_pairing.py  classes.py  dms_values_comparisons.py  dotbracket_comparisons.py  filtering.py  folding_api.py  glob_vars.py  mibp_comparisons.py  perturbations.py  utils.py  viz.py
SwitchFinder/wrappers/: .SwitchFinder_pipeline.py.swp  SwitchFinder_pipeline.py  apply_classifier.py  chop_sequences.py  find_mutually_exclusive_stems.py  fold_mutually_exclusive_structures.py  generate_mutations.py  new_classifier.py  preprocess_known_RNA_switches.py  train_classifier.py
dev/: build_docker.sh  run_docker.sh
example_data/: example_sequences.fa  seed_riboswitches.fa
output/: RNA_switch_scores.txt  RNA_switch_structures.txt  RNA_switch_structures_full.txt
